Added the possibility to use plain HTTP in the frontend.

--- a/httpd-extra-ssl.conf
+++ b/httpd-extra-ssl.conf
@@ -1,4 +1,4 @@
-Listen 443
+Listen ${HTTPD_PORT_SSL}
 
 SSLCipherSuite HIGH:!aNULL:!MD5:!RC4:!3DES
 SSLProxyCipherSuite HIGH:!aNULL:!MD5:!RC4:!3DES
@@ -10,7 +10,7 @@ SSLSessionCacheTimeout 300
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 
-<VirtualHost _default_:443>
+<VirtualHost _default_:${HTTPD_PORT_SSL}>
     SSLEngine on
 	SSLCertificateFile "/usr/local/apache2/conf/server.crt"
     SSLCertificateKeyFile "/usr/local/apache2/conf/server.key"
@@ -24,21 +24,5 @@ SSLRandomSeed connect builtin
     ProxyPass "/" ${HTTPD_PROXY_BACKEND_HOSTNAME}/
     ProxyPassReverse "/" ${HTTPD_PROXY_BACKEND_HOSTNAME}/
     
-    <Location />
-        AuthType Kerberos
-        Krb5KeyTab ${KERBEROS_KEYTAB_FILE}
-        KrbAuthRealms ${KERBEROS_REALM}
-		
-        AuthLDAPBindDN ${LDAP_BIND_USER}
-        AuthLDAPBindPassword ${LDAP_BIND_PASSWORD}
-        AuthLDAPUrl ${LDAP_URL}
-        
-		<RequireAll>
-		    Require valid-user
-		    Require ldap-group ${LDAP_GROUP_REQUIRE}
-		</RequireAll>
-		
-		RequestHeader unset Authorization
-		RequestHeader set ${HTTPD_PROXY_BACKEND_USER_HEADER} %{REMOTE_USER}s
-    </Location>
+    Include conf/extra/httpd-auth.conf
 </VirtualHost>                                  
