--- a/httpd.conf
+++ b/httpd.conf
@@ -35,4 +35,5 @@ TransferLog /proc/self/fd/1
 ErrorLog /proc/self/fd/2
 LogLevel ${HTTPD_LOGLEVEL}
 
-Include conf/extra/httpd-ssl.conf
+Include conf/extra/httpd-extra-ssl.conf
+Include conf/extra/httpd-extra-http.conf
