Added the possibility to specify a Kerberos SPN.

--- a/httpd-auth.conf
+++ b/httpd-auth.conf
@@ -2,6 +2,7 @@
     AuthType Kerberos
     Krb5KeyTab ${KERBEROS_KEYTAB_FILE}
     KrbAuthRealms ${KERBEROS_REALM}
+    KrbServiceName ${KERBEROS_SPN}
     
     AuthLDAPBindDN ${LDAP_BIND_USER}
     AuthLDAPBindPassword ${LDAP_BIND_PASSWORD}
